crates/cyrus-core/tests/ui/fail/checked_range_invalid.stderr
error[E0080]: evaluation panicked: checked_range! requires start < end
  --> tests/ui/fail/checked_range_invalid.rs:10:38
   |
10 |     const BAD: CheckedRange<usize> = checked_range!(10, 5);
   |                                      ^^^^^^^^^^^^^^^^^^^^^ evaluation of `main::BAD::_` failed here
   |
   = note: this error originates in the macro `$crate::panic::panic_2021` which comes from the expansion of the macro `checked_range` (in Nightly builds, run with -Z macro-backtrace for more info)
